2006-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.h src/gplt_x11.c term/x11.trm: Code cleanup.
	Assign separate protocol keys and disentangle the code supporting
	binary/ascii descriptions of color and polygons passed by the x11
	driver to gnuplot_x11.   Patchset #1549408

2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (set key): Fix gotcha in list of alignment 
	options in 'at <position>' case.

2006-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): For backward compatibility, allow
	"set term X" as shorthand for "set term x11".

2006-10-04  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg7.plt: Make sure no local encoding is in effect, since
	the corresponding TeX package is probably not going to be loaded.

	* term/post.trm (PS_vector): Fix breakage introduced by Bugfix #1542050
	The path length must not be set to 0 without issuing a stroke command,
	otherwise the current path may never be flushed at all.

2006-10-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/borders.dem: Place all 16 plots on one multiplot.

	* demo/all.dem: Put borders.dem inside all.dem.

2006-10-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: Changed date, version and patchlevel.

2006-10-03  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graph3d.c (place_arrows3d): Clip arrows even in 3D.  Patch
	from Harald Harders (SF #1569232).
	
	* term/svg.trm: Change sprintf() and fprintf() to strcpy and
	fputs, all over the place.
	(SVG_put_text): Fix handling of XML reserved characters in
	non-enhanced text output.

2006-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am: If ./configure has determined that TeX is
	not installed on this machine, do not try to install gnuplot.cfg
	in the TeX directory tree.
	Bug #1569033

2006-10-02  Daniel Sebald  <daniel.sebald@ieee.org>
